--- a/a1.1.html
+++ b/a1.1.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boeing</title>
-    <link rel="stylesheet" href="/Users/javiertrevino/Documents/VSC/a1.1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="a1.1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <script src="a1.js"></script>
 
 </head>
 <body>
@@ -30,8 +32,18 @@
                 <img class="img1" src="https://www.boeing.es/resources/images/common-product-images/787-dreamliner-banner.jpg">
                 <p class="descripcion">La tecnología líder del 787 Dreamliner ofrece oportunidades excepcionales a las aerolíneas de todo el mundo y mejora significativamente su  experiencia de vuelo. Lo denominamos ’el efecto Dreamliner’. Su eficiencia en el consumo de combustible y su flexibilidad en cuanto a autonomía no tienen precedentes, lo que permite a las aerolíneas abrir nuevas rutas de forma rentable y optimizar el rendimiento de la flota y la red. Y para los pasajeros constituye una experiencia de vuelo única, con más confort y menos cansancio. El efecto Dreamliner: una mejor forma de volar.</p>
             </article>
+            <article class="inputUser">
+                <p>¿De que país nos consultas?</p>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-default">País</span>
+                    <input id="pais" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                </div>
+                <button type="button" class="btn btn-outline-primary" onclick="funcion1()">Enviar</button>
+                <br>
+                <p id="avisoPais" class="avisoPais"></p>
+            </article>
             <article>
-                <h3>Características:</h3>
+                <h3 class="carac">Características:</h3>
                 <ul>
                     <li>Materiales avanzados</li>
                     <li>Rendimiento medioambiental excepcional</li>
@@ -49,5 +61,7 @@
             <li>Whatsapp</li>         
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
